# ELFSign

./: .gitignore  CMakeLists.txt  README.md
include/: argh.h  base64.h  config.h.in  elf_32.h  elf_64.h  test.h
src/: CMakeLists.txt  Makefile  elf32.c  elf64.c  main.c  out  prikey.pem  pubkey.pem  sign.c  sign32.c  sign64.c
src/include/: apue.h  argh.h  config.h  config.h.in  elf_32.h  elf_64.h  sign.h  sign32.h  sign64.h  test.h
src/pem/: prikey.pem  pubkey.pem
src/test/: elf32test.c  elf64test.c  sign32test.c  sign64test.c  signtest.c
src/util/: err.c  log.c
